--- a/packages/eslint-plugin-lazy-init/tsconfig.build.json
+++ b/packages/eslint-plugin-lazy-init/tsconfig.build.json
@@ -4,8 +4,8 @@
       "allowUnreachableCode": false,
       "allowUnusedLabels": false,
       "esModuleInterop": true,
-      "module": "commonjs",
-      "moduleResolution": "node",
+      "module": "Node16",
+      "moduleResolution": "Node16",
       "noImplicitReturns": true,
       "pretty": true,
       "skipLibCheck": true,
